added list of equations

--- a/definitions.tex
+++ b/definitions.tex
@@ -117,6 +117,7 @@ Every via-definition must have two minimum enclosure rules, one for every layer,
 	\label{eq:via_dimension}
 	{via dimension} = 2 \cdot \text{minimum enclosure} + \text{minimum via width}
 \end{equation}
+\equationnumber{via dimension}
 
 \begin{figure}
 	\centering
@@ -145,10 +146,13 @@ The other two used values are the edge- and area-capacitance. The edge-capacitan
 	\label{eq:area_capacitance}
 	C_a = C'_a \cdot l \cdot w
 \end{equation}
+\equationnumber{calculation of the area capacitance}
+
 \begin{equation}
 	\label{eq:edge_capacitance}
 	C_e = C'_e \cdot \frac{l}{d}
 \end{equation}
+\equationnumber{calculation of the edge capacitance}
 
 All in all, the aforementioned definitions are most likely not the right ones but the results are multiplied with adjustable weights afterwards anyway. Therefore, the exact values are not a matter of interest, the results are only used as rough estimations and measurement.
 
