--- a/routing.tex
+++ b/routing.tex
@@ -226,6 +226,7 @@ This extended version of the line expansion router is based on the simple versio
 	\label{eq:extended_line_expansion_objective}
 	p = w_R \cdot R + w_{C_a} \cdot C_a + w_{C_e} \cdot C_e
 \end{equation}
+\equationnumber{objective function of the extended line expansion router}
 (where $w_i$ are the weights and $R$, $C_a$ and $C_e$ are the parasitics as defined in \secref{sec:electrical_rules}) on which the actual selection is based.
 
 \begin{figure}
