--- a/thesis.tex
+++ b/thesis.tex
@@ -40,9 +40,9 @@
 \definecolor{darkgreen}{rgb}{0,.5,0}
 
 \newcommand{\listequationsname}{List of Equations}
-\newlistof{equationnumber}{equ}{\listequationsname}
-\newcommand{\equationnumber}[1]{%
-\addcontentsline{equ}{equationnumber}{\protect\numberline{\theequation} #1}\par}
+\newlistof{equationname}{equ}{\listequationsname}
+\newcommand{\equationname}[1]{%
+\addcontentsline{equ}{equationname}{\protect\numberline{\theequation} #1}\par}
 
 \begin{document}
 \authors{Benedikt Schmidt}
@@ -69,7 +69,7 @@
 \include{results}
 
 \listoffigures
-\listofequationnumber
+\listofequationname
 \bibliographystyle{tumbib}
 \bibliography{custom}
 
