added list of figures and equations to the table of contents

--- a/thesis.tex
+++ b/thesis.tex
@@ -68,8 +68,17 @@
 \include{routing}
 \include{results}
 
+\cleardoublepage
+\phantomsection
 \listoffigures
+\addcontentsline{toc}{chapter}{\listfigurename}
+
+\cleardoublepage
+\phantomsection
 \listofequationname
+\addcontentsline{toc}{chapter}{\listequationsname}
+
+\cleardoublepage
 \bibliographystyle{tumbib}
 \bibliography{custom}
 
