fixed equation for via dimension

--- a/definitions.tex
+++ b/definitions.tex
@@ -115,7 +115,7 @@ Every via-definition must have two minimum enclosure rules, one for every layer,
 
 \begin{equation}
 	\label{eq:via_dimension}
-	{via dimension} = 2 \cdot \text{minimum enclosure} + \text{minimum via width}
+	\text{via dimension} = 2 \cdot \text{minimum enclosure} + \text{minimum via width}
 \end{equation}
 \equationname{via dimension}
 
