fixed spelling stuff for capacitance

--- a/definitions.tex
+++ b/definitions.tex
@@ -141,7 +141,7 @@ In the tech-file from the manufacturer there also are electrical rules implied. 
 
 The first important value is the sheet resistance. This value defines the resistance of a layer and I use it to calculate the resistance of the routes. I do not need an exact resistance, only a tool to measure and compare, which takes the different layers into account. Therefore, my personal definition for this algorithm of the sheet resistance will possibly be not the right one. But in my point of view it is useful in this case. For routes on one layer I just multiply the sheet resistance value with the length of the route, as I always use the minimum width for routes. A via doesn't really have a length, so I multiply the value with the area. Afterwards, these two results are summed up for a whole connection and this then represents the resistance of this connection.
 
-The other two used values are the edge- and area-capacitance. The edge-capacitance illustrates the capacitor between two neighbour routes on the same layer, whereas the area-capacitance describes the capacitor between two routes on the same position but on different layers. The total capacities ($C_e$ and $C_a$) are calculated from the length where two routes are neighbours ($l$), the distance between them ($d$) in case of an edge-capacitance, the width they overlap, ($w$) in case of an area-capacitance, and the values from the technology file ($C'_e$ and $C'_a$).
+The other two used values are the edge- and area-capacitance. The edge-capacitance illustrates the capacitor between two neighbour routes on the same layer, whereas the area-capacitance describes the capacitor between two routes on the same position but on different layers. The total capacitance ($C_e$ and $C_a$) is calculated from the length where two routes are neighbours ($l$), the distance between them ($d$) in case of an edge-capacitance, the width they overlap, ($w$) in case of an area-capacitance, and the values from the technology file ($C'_e$ and $C'_a$).
 \begin{equation}
 	\label{eq:area_capacitance}
 	C_a = C'_a \cdot l \cdot w
