--- a/results.tex
+++ b/results.tex
@@ -21,7 +21,7 @@ The results above show that the layouts created by Plantage are at least feasibl
 \begin{samepage}
 Finally, I was able to reach all the targets claimed in the introduction:
 \begin{itemize}
-\item a line expansion router, which creates, in most cases \footnote{In the cases where the layout is not design rule clean it is usually easy to fix the problem manually. For instance, in special cases the minimum notch rule may be harmed, but then the gap can just be filled up.}, design rule clean routes \footnote{For capacities the ICFBInterface does not provide enough information about the additional guard ring, therefore it can not be considered} and considers symmetries
+\item a line expansion router, which creates, in most cases \footnote{In the cases where the layout is not design rule clean it is usually easy to fix the problem manually. For instance, in special cases the minimum notch rule may be harmed, but then the gap can just be filled up.}, design rule clean routes \footnote{For the capacitor the ICFBInterface does not provide enough information about the additional guard ring, therefore it can not be considered} and considers symmetries
 \item based on the previous router an extended version, which tries to reduce the parasitics
 \item a software design, where the routing algorithm can be exchanged easily
 \end{itemize}
