fixed indentation of equation list

--- a/thesis.tex
+++ b/thesis.tex
@@ -42,7 +42,7 @@
 \newcommand{\listequationsname}{List of Equations}
 \newlistof{equationname}{equ}{\listequationsname}
 \newcommand{\equationname}[1]{%
-\addcontentsline{equ}{equationname}{\protect\numberline{\theequation} #1}\par}
+\addcontentsline{equ}{figure}{\protect\numberline{\theequation} #1}\par}
 
 \begin{document}
 \authors{Benedikt Schmidt}
