--- a/routing.tex
+++ b/routing.tex
@@ -101,7 +101,7 @@ The first decision I had to make was to decide which algorithms should be implem
 \subsection{Line Expansion Router}
 
 \subsubsection{Select a Target}
-The first thing which the algorithm has to do before it can calculate a route is to select the start and target contact area. There can be several possibilities, as every pin can have several contact areas. Later on it will be noticable that already created routes can be candidates to start or end with a route. Basically, this task can be seen as the selection of the closest rectangles of two lists of possibilities. For this I want to talk about how the closest distance between two rectangles can be calculated.
+The first thing which the algorithm has to do before it can calculate a route is to select the start and target contact area. There can be several possibilities, as every pin can have several contact areas. Later on it will be noticeable that already created routes can be candidates to start or end with a route. Basically, this task can be seen as the selection of the closest rectangles of two lists of possibilities. For this I want to talk about how the closest distance between two rectangles can be calculated.
 
 For two rectangles there are several possible constellations. For the first possible position one has to check whether they overlap. If this is the case I can easily calculate the rectangle which is covered by both \figref{fig:rectangles_overlapping} and the distance is 0. As starting points for both rectangles I can select the center of gravity of the overlapping area.
 
@@ -167,9 +167,9 @@ Sometimes it is also necessary to go above an obstacle, which is on a layer belo
 	\label{fig:router_as_far_as_necessary_above}
 \end{figure}
 
-Last but no least, it is also possible to switch to the neighboured layers. For modules the obstacle cannot be crossed this way, as they are obstacles at every layer. But if for example the obstacle is just another route a layer switch may solve the problem. In soee cases it is even reasonable to force a layer switch when it is currently not possible, because for instance another route is too close. In this case I try to make one small step, which is just big enough to fulfill all design rules (especially the notch rule) and switch the layer at this new point.
+Last but no least, it is also possible to switch to the neighboured layers. For modules the obstacle cannot be crossed this way, as they are obstacles at every layer. But if for example the obstacle is just another route a layer switch may solve the problem. In such cases it is even reasonable to force a layer switch when it is currently not possible, because for instance another route is too close. In this case I try to make one small step, which is just big enough to fulfill all design rules (especially the notch rule) and switch the layer at this new point.
 
-All this possibilities to find a way to the target must combined clever, otherwise the performance becomes very bad. Therefore it makes sense to, for instance, prefer the steps into good directions. I choose the bad directions only if the shortest possible connection with only steps into good directions at the current point is bigger than 10\% of the manhattan distance to the target. This ensures that too long routes can be avoided and still results are created fast enough.
+All this possibilities to find a way to the target must combined clever, otherwise the performance becomes very bad. Therefore it makes sense to, for instance, prefer the steps into good directions. I choose the bad directions only if the shortest possible connection with only steps into good directions at the current point is bigger than 10\% of the Manhattan distance to the target. This ensures that too long routes can be avoided and still results are created fast enough.
 
 \subsubsection{Avoid Collisions}
 To avoid collisions I take the preferred directions for every layer into account. This information is again stored in the technology file and describes if a layer should be used for horizontal or vertical routes. This reduces the possibility of collisions very efficiently and results in less complex layouts. Last but not least it also improves the performance of the router significantly.
